making it so that all overlays correctly obscure the game even when the screen height is reduced and scrollbar appears. still shows peak of keyboard, but that's intended

--- a/view/style.css
+++ b/view/style.css
@@ -964,10 +964,6 @@ li {
 	font-weight: bold;
 }
 
-/* #trigramReveal span {
-	width: 4rem;
-	text-align: center;
-} */
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*                YOU WIN OVERLAY                           */
